--- a/Beginner_1/02. Coding Style.ipynb
+++ b/Beginner_1/02. Coding Style.ipynb
@@ -101,6 +101,8 @@
    },
    "outputs": [],
    "source": [
+    "# Correct\n",
+    "\n",
     "x = 1\n",
     "y = 2\n",
     "long_variable = 3"
@@ -114,6 +116,8 @@
    },
    "outputs": [],
    "source": [
+    "# Must Avoid\n",
+    "\n",
     "x             = 1\n",
     "y             = 2\n",
     "long_variable = 3"
