--- a/Beginner_2/6.4 Data Types - Lists .ipynb
+++ b/Beginner_2/6.4 Data Types - Lists .ipynb
@@ -170,6 +170,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### `extend()`\n",
+    "\n",
+    "Extends list by appending elements from the iterable. This method does not return any value but add the content to existing list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "x = ['P', 'y', 't', 'h', 'o','n']\n",
+    "\n",
+    "x.extend('M')\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NOTE: `append()` vs. `extend`\n",
+    "\n",
+    "- `append()` adds object at end of the list while;\n",
+    "- `extend()` extends list by appending elements from the iterable. It _concatenates_ the first list with another list.\n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# append()\n",
+    "\n",
+    "x = [1, 2, 3]\n",
+    "x.append([4, 5])\n",
+    "\n",
+    "# Will give you [1, 2, 3, [4, 5]]\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# extend()\n",
+    "\n",
+    "x = [1, 2, 3]\n",
+    "x.extend([4, 5])\n",
+    "\n",
+    "# Will give you [1, 2, 3, 4, 5]\n",
+    "print (x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### `delete()`\n",
     "\n",
     "To remove a list element, you can use either the <b>`del`</b> statement if you know exactly which element(s) you are deleting or the __`remove()`__ method if you are uncertain."
