Added screenshots in Python 2 examples

--- a/Beginner_1/04. Operators and Delimiters.ipynb
+++ b/Beginner_1/04. Operators and Delimiters.ipynb
@@ -109,8 +109,20 @@
    "outputs": [],
    "source": [
     "# Python 2.x\n",
+    "'''\n",
+    "NOTE:\n",
+    "This example won't run because this notebook is on Python 3.\n",
+    "Please try the example on your own shell or refer on the image below.\n",
+    "'''\n",
     "print 3/2 # will print 1\n",
     "print 3/2.0 # will print 1.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Beginner_1](./images/img_division_2.x.png)"
    ]
   },
   {
@@ -146,8 +158,20 @@
    "outputs": [],
    "source": [
     "# Python 2.x\n",
+    "'''\n",
+    "NOTE:\n",
+    "This example won't run because this notebook is on Python 3.\n",
+    "Please  try the example on your own shell or refer on the image below.\n",
+    "'''\n",
     "print 3//2 # will print 1\n",
     "print 3//2.0 # will print 1.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Beginner_1](./images/img_floor_division_2.x.png)"
    ]
   },
   {
