Added info about lists

--- a/Beginner_2/6.4 Data Types - Lists .ipynb
+++ b/Beginner_2/6.4 Data Types - Lists .ipynb
@@ -287,6 +287,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### `sort()`\n",
+    "\n",
+    "This method sorts the list. This method does not return any value but reverse the given object from the list.\n",
+    "\n",
+    "For example: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run the code\n",
+    "\n",
+    "x = ['apple','123','orange','grapes']\n",
+    "\n",
+    "x.sort()\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NOTE: `sort()` vs. `sorted()`\n",
+    "\n",
+    "There's also a built-in function called _`sorted()`_. \n",
+    "\n",
+    "- `sort()` is an in-place method. Meaning, the objects get sorted without a copy being creadted.\n",
+    "- `sorted()` makes a copy of the target."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# sort()\n",
+    "\n",
+    "x = [13,3,23,8]\n",
+    "\n",
+    "x.sort()\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# sorted()\n",
+    "\n",
+    "'''\n",
+    "If you run the code, the results will be the same\n",
+    "as the above example using sort(). But, you already got the idea, right? ;) \n",
+    "'''\n",
+    "\n",
+    "x = [13,3,23,8]\n",
+    "\n",
+    "sorted(x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 6.4.3 Slicing\n",
     "\n",
     "One way to remember how slices work is to think of the indices as pointing between characters, with the left edge of the first character numbered 0. Then the right edge of the last character of a string of n characters has index n:\n",
@@ -358,7 +435,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -387,6 +464,61 @@
     "\n",
     "x = ['P', 'y', 't', 'h', 'o','n']\n",
     "print(x[::-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.4.4 Math Operations\n",
+    "\n",
+    "Lists respond to the __`+`__ and __`*`__ operators like in strings. They mean _concatenation_ and _repition_, and they result to a new list. \n",
+    "\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Concatenation\n",
+    "\n",
+    "[1, 2, 3] + [4, 5, 6]\n",
+    "\n",
+    "# Results to [1,2,3,4,5,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Repetition \n",
+    "\n",
+    "[1,2] * 2\n",
+    "\n",
+    "# Results to [1,2,1,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Another example in Repetition\n",
+    "# Run the code to see the result!\n",
+    "\n",
+    "[\"hi\",\"hello\"] * 3\n"
    ]
   },
   {
