--- a/Beginner_2/6.4 Data Types - Lists .ipynb
+++ b/Beginner_2/6.4 Data Types - Lists .ipynb
@@ -319,8 +319,14 @@
     "\n",
     "There's also a built-in function called _`sorted()`_. \n",
     "\n",
-    "- `sort()` is an in-place method. Meaning, the objects get sorted without a copy being creadted.\n",
-    "- `sorted()` makes a copy of the target."
+    "__`sort()` __\n",
+    "- is an in-place method. Meaning, the objects get sorted without a copy being creadted.\n",
+    "- only defined on lists.\n",
+    "\n",
+    "\n",
+    "__`sorted()`__ \n",
+    "- Keeps the original list and returns a new sorted list. _(i.e.makes a copy of the target._)\n",
+    "- accepts any iterable."
    ]
   },
   {
