--- a/Beginner_3/10. Defining and Calling Functions.ipynb
+++ b/Beginner_3/10. Defining and Calling Functions.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10.2 Positional Arguments\n",
+    "## Positional Arguments\n",
     "\n",
     "The function requires a positional argument: \"__`n`__\". This is a good time to mention that naming things descriptively really helps. Coupled with Python's helpful error messages, descriptive variable, function, and class names make it easy to understand and debug errors. In this case, 'n' is a number. Specifically, this function returns a fibonacci sequence for as long as the numbers in the squence are less than the given max number.\n",
     "\n",
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10.3 Keyword Arguments\n",
+    "## Keyword Arguments\n",
     "\n",
     "Arguments can be made optional when default values are provided. These are known as keyword arguments.\n",
     "\n",
@@ -121,14 +121,100 @@
    },
    "outputs": [],
    "source": [
-    "fib(3)  # still works!"
+    "fib(max_number=3)  # still works!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10.4 Argument Syntax\n",
+    "## Default Values\n",
+    "\n",
+    "If keyword arguments were defined, the function can be called with positional arguments instead of keyword arguments. Python uses the order in the definition to determine which values belong to which keywords."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def func(a=0, b=1, c=2):\n",
+    "    print(a, b, c)\n",
+    "\n",
+    "func(a=3, b=2, c=1) == func(3, 2, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Avoid using mutable values like empty lists or dictionaries as default keyword argument values. Use immutable values like `None`.\n",
+    "\n",
+    "Default values are created when the function is defined, not when the function is called. For example `L=[]` is created once and stored. If this was given a mutable value, the new value will be carried over to succeeding calls to the function. The best practice is to assign an immutable value and add the logic to assign the default value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# be careful\n",
+    "def f(a, L=[]):\n",
+    "    L.append(a)\n",
+    "    print(L)\n",
+    "\n",
+    "f(1)\n",
+    "f(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# good practice\n",
+    "def f(a, L=None):\n",
+    "    if L is None:\n",
+    "        L = []\n",
+    "    L.append(a)\n",
+    "    print(L)\n",
+    "\n",
+    "f(1)\n",
+    "f(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Argument Syntax\n",
     "\n",
     "There can be any number of positional arguments and any number of optional arguments. They can appear together in a function definition for as long as required positional arguments come before optional defaulted arguments."
    ]
@@ -144,7 +230,7 @@
     "def foo(p=1, q):\n",
     "    return p, q\n",
     "\n",
-    "foo(1)"
+    "foo(1, 2)  # it's an error"
    ]
   },
   {
@@ -179,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10.5 Starred Arguments\n",
+    "## Starred Arguments\n",
     "\n",
     "In Python, there's a third way of passing arguments to a function. If you wanted to pass a list with an unknown length, even empty, you could pass them in starred arguments."
    ]
@@ -260,7 +346,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10.6 Packing and Unpacking Arguments\n",
+    "## Packing and Unpacking Arguments\n",
     "\n",
     "### `def function(*args, **kwargs):`\n",
     "\n",
