Arranged the numbering

--- a/Beginner_2/01. Built-in Functions.ipynb
+++ b/Beginner_2/01. Built-in Functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Built-in Functions in Python 3\n",
+    "# 01. Built-in Functions in Python 3\n",
     "\n",
     "Listed below are some of the most common built-in functions in Python 3.x:"
    ]
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 [input( )](https://docs.python.org/3.5/library/functions.html#input)\n",
+    "## 1.1 [input( )](https://docs.python.org/3.5/library/functions.html#input)\n",
     "\n",
     "This is designed for accepting data directly from the user.\n",
     "\n",
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 [print()](https://docs.python.org/3.5/library/functions.html#print)\n",
+    "## 1.2 [print()](https://docs.python.org/3.5/library/functions.html#print)\n",
     "\n",
     "If you want your program to display something, you can give explicit instructions with the __`print()`__ function. \n",
     "\n",
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.3 [type()](https://docs.python.org/3.5/library/functions.html#type)\n",
+    "## 1.3 [type()](https://docs.python.org/3.5/library/functions.html#type)\n",
     "\n",
     "This returns the type of an object. For example:"
    ]
@@ -215,13 +215,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.4 Casting\n",
+    "## 1.4 Casting\n",
     "\n",
     "Sometimes, you may need to perform conversions between the built-in types. To convert between types, you simply use the type name as a function. __Casting__ is when you convert a variable value from one type to another. \n",
     "\n",
     "There are several built-in functions to perform conversion from one data type to another. These functions return a new object representing the converted value.\n",
     "\n",
-    "### 5.4.1 Converting String into a Proper Number"
+    "### 1.4.1 Converting String into a Proper Number"
    ]
   },
   {
