--- a/Beginner_2/02. Variables.ipynb
+++ b/Beginner_2/02. Variables.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variables\n",
+    "# 02. Variables\n",
     "\n",
     "Variables are reserved memory locations to store values.\n",
     "Every variable in Python is an object."
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.1 Identifier Naming Rules\n",
+    "## 2.1 Identifier Naming Rules\n",
     "\n",
     "- (a) Variables names must start with a letter or an underscore, such as:\n",
     "    - variable\n",
@@ -80,7 +80,7 @@
     "\n",
     ">These types of shortcuts may save a few seconds of typing, but that savings comes at the expense of hours or days of technical debt. It’s not worth it.\n",
     "\n",
-    "## 6.2 Reserved Words\n",
+    "## 2.2 Reserved Words\n",
     "\n",
     "The following identifiers are used as reserved words, or keywords of the language, and __cannot__ be used as ordinary identifiers. They must be spelled exactly as written here:"
    ]
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.3 Naming Conventions\n",
+    "## 2.3 Naming Conventions\n",
     "\n",
     ">Understandable code frees mental bandwidth from having to puzzle out inconsistencies, making it easier to maintain and enhance projects of all sizes.\n",
     "\n",
@@ -115,7 +115,7 @@
     "2. Descriptive names are very useful\n",
     "3. Avoid using the lowercase letter ‘l’, uppercase ‘O’, and uppercase ‘I’. Why? Because the l and the I look a lot like each other and the number 1. And O looks a lot like 0.\n",
     "\n",
-    "## 6.4 Multiple Assignment\n",
+    "## 2.4 Multiple Assignment\n",
     "\n",
     "Python allows you to assign a single value to several variables simultaneously."
    ]
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.1 Re-assigning of Variables\n",
+    "## 2.4.1 Re-assigning of Variables\n",
     "\n",
     "Python also allows assignment of multiple variables simultaneously."
    ]
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.5 [Comparison Chaining](https://docs.python.org/3.5/reference/expressions.html#comparisons) \n",
+    "## 2.5 [Comparison Chaining](https://docs.python.org/3.5/reference/expressions.html#comparisons) \n",
     "\n",
     "\n",
     "All comparison operations in Python have the same priority, which is lower than that of any arithmetic, shifting or bitwise operation. \n",
@@ -180,7 +180,7 @@
     "\n",
     "![Beginner_2](./images/img_comparison_chaining.png)\n",
     "\n",
-    "## 6.6 Data Types\n",
+    "## 2.6 Data Types\n",
     "\n",
     "The data stored in memory can be of many types. For example, a person's age is stored as a numeric value and his or her address is stored as alphanumeric characters. Python has various standard data types that are used to define the operations possible on them and the storage method for each of them.\n",
     "\n",
@@ -215,7 +215,7 @@
     "- frozen set\n",
     "- bytes\n",
     "\n",
-    "### 1. Numbers (immutable)\n",
+    "### 2.6.1 Numbers (immutable)\n",
     "\n",
     "Number data types store numeric values. Number objects are created when you assign a value to them. \n",
     "\n",
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. String (immutable)\n",
+    "### 2.6.2 String (immutable)\n",
     "\n",
     "- Strings in Python are identified as a contiguous set of characters represented in the quotation marks. \n",
     "\n",
@@ -342,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. List (mutable)\n",
+    "### 2.6.3 List (mutable)\n",
     "\n",
     "Lists are the most versatile of Python's compound data types. A list contains items separated by commas and enclosed within square brackets (__`[]`__).\n",
     "\n",
@@ -402,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Tuples (immutable)\n",
+    "### 2.6.4 Tuples (immutable)\n",
     "\n",
     "A tuple is another sequence data type that is similar to the list. A tuple consists of a number of values separated by commas. Unlike lists, however, tuples are enclosed within parentheses.\n",
     "\n",
@@ -436,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Dictionary (mutable)\n",
+    "### 2.6 5 Dictionary (mutable)\n",
     "\n",
     "Python's dictionaries are kind of hash table type. They work like associative arrays or hashes found in Perl and consist of key-value pairs. A dictionary key can be almost any Python type, but are usually numbers or strings. Values, on the other hand, can be any arbitrary Python object.\n",
     "\n",
@@ -475,7 +475,7 @@
    "source": [
     "Dictionaries have __no concept of order__ among elements. It is incorrect to say that the elements are \"out of order\"; they are simply unordered.\n",
     "\n",
-    "## 6.7 Namespace\n",
+    "## 2.7 Namespace\n",
     "\n",
     "Generally speaking, a namespace (sometimes also called a context) is a naming system for making names unique to avoid ambiguity. \n",
     "\n",
