--- a/Beginner_2/3.4 Data Types - Lists .ipynb
+++ b/Beginner_2/3.4 Data Types - Lists .ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.4 List\n",
+    "# 3.4 List\n",
     "\n",
     "List is the most versatile datatype available in Python which can be written as a list of comma-separated values between square brackets (__[ ]__).\n",
     "\n",
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.1 Accessing values in lists\n",
+    "## 3.4.1 Accessing values in lists\n",
     "\n",
     "You can access an individual item on the list by its index. An index is like an address that identifies the item's place in the list. The index appears directly after the list name, in between brackets, like this: __`list_name[index]`__.\n",
     "\n",
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.2 Methods\n",
+    "## 3.4.2 Methods\n",
     "\n",
     "### `len()`\n",
     "\n",
@@ -370,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.3 Slicing\n",
+    "## 3.4.3 Slicing\n",
     "\n",
     "One way to remember how slices work is to think of the indices as pointing between characters, with the left edge of the first character numbered 0. Then the right edge of the last character of a string of n characters has index n:\n",
     "\n",
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.4 Math Operations\n",
+    "## 3.4.4 Math Operators\n",
     "\n",
     "Lists respond to the __`+`__ and __`*`__ operators like in strings. They mean _concatenation_ and _repition_, and they result to a new list. \n",
     "\n",
