--- a/Beginner_2/3.3 Data Types - Strings.ipynb
+++ b/Beginner_2/3.3 Data Types - Strings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6.3 Strings \n",
+    "# 3.3 Strings \n",
     "\n",
     "Strings store characters and have many built-in convenience methods that let you modify their content. Strings are immutable, meaning they cannot be changed in place.\n",
     "\n",
@@ -28,7 +28,7 @@
     "\n",
     "If you have or want to support both, you can still mark strings with u in Python 3.x.\n",
     "\n",
-    "## 6.3.1 Quotations\n",
+    "## 3.3.1 Quotations\n",
     "\n",
     "Strings are amongst the most popular types in Python. We can create them simply by enclosing characters in quotes. Python treats single quotes the same as double quotes.\n",
     "\n",
@@ -51,6 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__NOTE:__\n",
     "One advantage of using double quotes is that, you don't have to worry about printing with apostrophes:"
    ]
   },
@@ -93,7 +94,7 @@
    "source": [
     "You may escape the apostrophe (__`'`__) using a backslash (__`\\`__) as seen on the example above. \n",
     "\n",
-    "## 6.3.2 Escape characters\n",
+    "## 3.3.2 Escape characters\n",
     "\n",
     "This __`\\`__ (backslash) character, as seen on the previous example, is used to escape characters that otherwise have a special meaning, such as newline, backslash itself, or the quote character.\n",
     "\n",
@@ -197,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.3.3 Methods \n",
+    "## 3.3.3 Methods \n",
     "\n",
     "Here are a few useful methods for strings:\n",
     "\n",
@@ -334,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.4 String Formatting \n",
+    "## 3.3.4 String Formatting \n",
     "\n",
     "The string format operator (__`%`__) is unique to strings and makes up for the pack of having functions from C's `printf()`.\n",
     "\n",
@@ -431,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.5 String Slicing\n",
+    "## 3.3.5 String Slicing\n",
     "\n",
     "String slicing extracts elements based on a start and stop.\n",
     "\n",
