--- a/Beginner_3/10. Defining and Calling Functions.ipynb
+++ b/Beginner_3/10. Defining and Calling Functions.ipynb
@@ -158,20 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n",
-      "[1, 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# be careful\n",
     "def f(a, L=[]):\n",
@@ -184,20 +175,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n",
-      "[2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# good practice\n",
     "def f(a, L=None):\n",
@@ -531,6 +513,41 @@
     "The dictionary we passed was unpacked and considered as if it was a bunch of keyword arguments passed to the function.\n",
     "\n",
     "Notice how the keyword argument with a default value was overridden."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lambda Functions\n",
+    "\n",
+    "Lambda functions are functions that are not bound to a name (but they can be assigned to a variable, giving them a name that lets you refer to it). Aside from not having a name, they also don't have a `return` statement. Instead, an expression is returned. A lambda function can only have one line of expression. It's a simple but powerful concept."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def f (x): return x**2\n",
+    "\n",
+    "g = lambda x: x**2\n",
+    "\n",
+    "f(8) == g(8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lambda functions should be simple. More complicated logic should just use normal functions.\n",
+    "\n",
+    "Common use cases would be for simple, one-time functions that can be thrown away. They can also be used for complex logic with lambda functions nested within each other or within other functinos. But using it this way sacrifices readability and makes it hard to debug compared to normal functions.\n",
+    "\n",
+    "When should you use lambda functions? Only when you can't avoid it. In any case, normal functions will be sufficient, familiar and easier to read or debug."
    ]
   }
  ],
