Lambda function closures

--- a/Beginner_3/10. Defining and Calling Functions.ipynb
+++ b/Beginner_3/10. Defining and Calling Functions.ipynb
@@ -181,7 +181,7 @@
    },
    "outputs": [],
    "source": [
-    "# good practice\n",
+    "# best practice\n",
     "def f(a, L=None):\n",
     "    if L is None:\n",
     "        L = []\n",
@@ -547,7 +547,64 @@
     "\n",
     "Common use cases would be for simple, one-time functions that can be thrown away. They can also be used for complex logic with lambda functions nested within each other or within other functinos. But using it this way sacrifices readability and makes it hard to debug compared to normal functions.\n",
     "\n",
-    "When should you use lambda functions? Only when you can't avoid it. In any case, normal functions will be sufficient, familiar and easier to read or debug."
+    "When should you use lambda functions? When you are into functional programming or only when you can't avoid it. In any case, normal functions will be more familiar, sufficient, easier to read and debug."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Late Binding\n",
+    "\n",
+    "Values of variables are looked up at the time when functions are called because Python's closures are late binding. Values are looked up when they are needed. When a returned function is called, the value returned is the value at call time (as opposed to when the function is defined, when default keyword arguments are provided). By then, based on the execution, the value is set as the final value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def create_multipliers():\n",
+    "    return [lambda x: i * x for i in range(5)]\n",
+    "\n",
+    "for multiplier in create_multipliers():\n",
+    "    print(multiplier(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output was different from expected:\n",
+    "\n",
+    "```\n",
+    "0\n",
+    "2\n",
+    "4\n",
+    "6\n",
+    "8\n",
+    "```\n",
+    "\n",
+    "Instead of the list of values above, the last value is instead repeated.\n",
+    "The solution is to apply a keyword argument that supplies a default value to a variable. This immediately creates a variable that is bound to the local scope and makes the closure evaluate when the function is defined instead of its usual late binding behavior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def create_multipliers():\n",
+    "    return [lambda x, i=i : i * x for i in range(5)]  # assign default value\n",
+    "\n",
+    "for multiplier in create_multipliers():\n",
+    "    print(multiplier(2))"
    ]
   }
  ],
