Added summary + other modiifications

--- a/Beginner_1/01. Hello, World.ipynb
+++ b/Beginner_1/01. Hello, World.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## HELLO WORLD!"
+    "## 01. Hello, World!"
    ]
   },
   {
@@ -14,7 +14,11 @@
     "Welcome to Python!\n",
     "You'll be using these interactive notebooks throughout this tutorial.\n",
     "\n",
-    "You may run the codes (`shift + enter`), and change it. Basically you may do whatever you want to the codes for testing. :)"
+    "It is recommended to use Python 3. You can check the version that you're using on the upper right side of your screen:\n",
+    "\n",
+    "![Beginner_1](./images/img_version.png)\n",
+    "\n",
+    "You may run the codes (__`shift + enter`__), and change it. Basically you may do whatever you want to the codes for testing. :)"
    ]
   },
   {
@@ -54,6 +58,25 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you're having trouble or for some reason, you just want to restart the kernel, you may do so! On the navigation bar, click on __Kernel__ and choose __Restart__:\n",
+    "\n",
+    "![Beginner_1](./images/img_restart.png)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A promt will appear and you may choose between __Clear all outputs & restart__ or just __Restart__:\n",
+    "\n",
+    "![Beginner_1](./images/img_kernel_options.png)"
    ]
   },
   {
