--- a/Beginner_1/02. Introspection.ipynb
+++ b/Beginner_1/02. Introspection.ipynb
@@ -12,7 +12,8 @@
     "## 2.1 Starting the Python interpreter in interactive mode\n",
     "Just go to the terminal and type <b>`python`</b> and you will see the Python promt (<b> `>>>` </b>) and the Python version that you are currently using:\n",
     "\n",
-    "![Beginner_1](./images/img_python_prompt.png)"
+    "![Beginner_1](./images/img_python_prompt.png)\n",
+    "On the image above, you can see that I'm using Python version 3.5.1."
    ]
   },
   {
