--- a/Beginner_1/03. Coding Style.ipynb
+++ b/Beginner_1/03. Coding Style.ipynb
@@ -101,8 +101,7 @@
    },
    "outputs": [],
    "source": [
-    "# Correct\n",
-    "\n",
+    "# Yes\n",
     "x = 1\n",
     "y = 2\n",
     "long_variable = 3"
@@ -116,8 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "# Must Avoid\n",
-    "\n",
+    "# No\n",
     "x             = 1\n",
     "y             = 2\n",
     "long_variable = 3"
@@ -377,7 +375,7 @@
    "source": [
     "PEP 8 is the official style guide for Python.\n",
     "\n",
-    "For the PEP 8 official documentation, please check this [link](https://www.python.org/dev/peps/pep-0008/)\n"
+    "For the PEP 8 official documentation, please check this [link](https://www.python.org/dev/peps/pep-0008/).\n"
    ]
   }
  ],
