Added summary and notes until variables

--- a/Beginner_2/02. Variables.ipynb
+++ b/Beginner_2/02. Variables.ipynb
@@ -544,6 +544,20 @@
     "\n",
     "We'll tackle more about namespace in the later part of this tutorial."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "Today, you have learned about Python variables and a brief introduction about Data Types and Namespaces.\n",
+    "\n",
+    "Remember: \n",
+    "> Python variables are nothing but reserved memory locations to store values. This means that when you create a variable you reserve some space in memory.\n",
+    "\n",
+    "> Based on the data type of a variable, the interpreter allocates memory and decides what can be stored in the reserved memory. Therefore, by assigning different data types to variables, you can store integers, decimals or characters in these variables."
+   ]
   }
  ],
  "metadata": {
