--- a/Beginner_2/01. Built-in Functions.ipynb
+++ b/Beginner_2/01. Built-in Functions.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# 01. Built-in Functions in Python 3\n",
     "\n",
-    "Listed below are some of the most common built-in functions in Python 3.x:"
+    "Functions that come built into the Python language itself are called built-in functions and are readily available to us.\n",
+    "\n",
+    "Listed below are some of the most common built-in functions in Python 3:"
    ]
   },
   {
@@ -42,20 +44,10 @@
     "\n",
     "In Python 2.x, there were two input functions, `input()` and `raw_input()`. It was Python 2.x's `raw_input()` that functioned similarly to Python 3.x's `input()`.\n",
     "\n",
-    "Run the code below in Python 2.x:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "my_input = input('Enter a number: ')\n",
+    "See this example from Python 2:\n",
     "\n",
-    "type(my_input)"
+    "![Beginner_2](./images/img_raw_input1.png)\n",
+    "![Beginner_2](./images/img_raw_input2.png)"
    ]
   },
   {
@@ -295,6 +287,13 @@
    "source": [
     "![Beginner_2](./images/img_datatype_conversion_1.png)\n",
     "![Beginner_2](./images/img_datatype_conversion_2.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Today you gave learned some of the common built-in functions in Python. Please refer to the [Official Documantation](https://docs.python.org/3/library/functions.html) for the full list."
    ]
   }
  ],
