Arranged the numbering

--- a/Beginner_3/04. Defining and Calling Functions.ipynb
+++ b/Beginner_3/04. Defining and Calling Functions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 10.1 Defining a Function\n",
+    "## 4.1 Defining a Function\n",
     "\n",
     "The keyword `def` introduces a [function definition](https://docs.python.org/3.5/tutorial/controlflow.html#defining-functions). It's followed by the function name, parenthesized list of formal parameters, and ends with a colon. The indented statements below it are executed with the function name is called."
    ]
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Positional Arguments\n",
+    "## 4.2 Positional Arguments\n",
     "\n",
     "The function requires a positional argument: \"__`n`__\". This is a good time to mention that naming things descriptively really helps. Coupled with Python's helpful error messages, descriptive variable, function, and class names make it easy to understand and debug errors. In this case, 'n' is a number. Specifically, this function returns a fibonacci sequence for as long as the numbers in the squence are less than the given max number.\n",
     "\n",
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Keyword Arguments\n",
+    "## 4.3 Keyword Arguments\n",
     "\n",
     "Arguments can be made optional when default values are provided. These are known as keyword arguments.\n",
     "\n",
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Default Values\n",
+    "## 4.4 Default Values\n",
     "\n",
     "If keyword arguments were defined, the function can be called with positional arguments instead of keyword arguments. Python uses the order in the definition to determine which values belong to which keywords."
    ]
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Argument Syntax\n",
+    "## 4.5 Argument Syntax\n",
     "\n",
     "There can be any number of positional arguments and any number of optional arguments. They can appear together in a function definition for as long as required positional arguments come before optional defaulted arguments."
    ]
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Starred Arguments\n",
+    "## 4.6 Starred Arguments\n",
     "\n",
     "In Python, there's a third way of passing arguments to a function. If you wanted to pass a list with an unknown length, even empty, you could pass them in starred arguments."
    ]
@@ -328,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Packing and Unpacking Arguments\n",
+    "## 4.7 Packing and Unpacking Arguments\n",
     "\n",
     "### `def function(*args, **kwargs):`\n",
     "\n",
@@ -519,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lambda Functions\n",
+    "## 4.8 Lambda Functions\n",
     "\n",
     "Lambda functions are functions that are not bound to a name (but they can be assigned to a variable, giving them a name that lets you refer to it). Aside from not having a name, they also don't have a `return` statement. Instead, an expression is returned. A lambda function can only have one line of expression. It's a simple but powerful concept."
    ]
