--- a/Beginner_2/3.6 Data Types - Dictionaries.ipynb
+++ b/Beginner_2/3.6 Data Types - Dictionaries.ipynb
@@ -454,6 +454,15 @@
     "\n",
     "dict.values(my_dictionary) or my_dictionary.values()  # my_dictionary.itervalues() in Python 2.x"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Notes\n",
+    "- A dictionary is also known as \"Associate Array\", \"Map\", \"Hash Map\",  or \"Unordered Map\".\n",
+    "> The conceptual implementation of a dictionary is that of a hash table, meaning, checks for existence are quite fast. We can determine if a specific key is present in the dictionary without needing to examine every element (which gets slower as the dictionary gets bigger). The Python interpreter can just go to the location key \"should be\" at (if it's in the dictionary) and see if key is actually there.\n"
+   ]
   }
  ],
  "metadata": {
