--- a/Beginner_3/01. Loops and Iteration.ipynb
+++ b/Beginner_3/01. Loops and Iteration.ipynb
@@ -4,9 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 1. Loops and Iteration\n",
+    "\n",
+    "A loop statement allows us to execute a statement or group of statements multiple times. Python provides following types of loops to handle looping requirements:\n",
+    "\n",
+    "| __Loop Type__ |                                                             __Description__                                                             |\n",
+    "|:-------------:|:---------------------------------------------------------------------------------------------------------------------------------------:|\n",
+    "| while loop    | Repeats a statement or group of statements while a given condition is __TRUE__.  It tests the condition before executing the loop body. |\n",
+    "| for loop      | Executes a sequence of statements multiple times and abbreviates the code that manages the loop variable.                               |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1.1 [While](https://docs.python.org/3.5/reference/compound_stmts.html#while)\n",
     "\n",
-    "The `while` statement will loop for as long as the condition is true."
+    "As mentioned, the `while` statement will loop for as long as the condition is true."
    ]
   },
   {
