--- a/Beginner_3/04. Defining and Calling Functions.ipynb
+++ b/Beginner_3/04. Defining and Calling Functions.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 4. Defining and Calling Functions\n",
+    "\n",
+    ">  Functions are little self-contained programs that perform a specific task, which you can incorporate into your own larger programs. After you have created a function, you can use it at any time, in any place. This saves you the time and effort of having to retell the computer what to do every time it does a common task."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4.1 Defining a Function\n",
     "\n",
     "The keyword `def` introduces a [function definition](https://docs.python.org/3.5/tutorial/controlflow.html#defining-functions). It's followed by the function name, parenthesized list of formal parameters, and ends with a colon. The indented statements below it are executed with the function name is called."
