--- a/Beginner_3/03. Exception Handling.ipynb
+++ b/Beginner_3/03. Exception Handling.ipynb
@@ -4,6 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 3. Exception Handling\n",
+    "\n",
+    "> An exception is an event, which occurs during the execution of a program that disrupts the normal flow of the program's instructions. In general, when a Python script encounters a situation that it cannot cope with, it raises an exception. An exception is a Python object that represents an error.\n",
+    "\n",
+    "> When a Python script raises an exception, it must either handle the exception immediately otherwise it terminates and quits.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3.1 [Try](https://docs.python.org/3.5/reference/compound_stmts.html#try)\n",
     "\n",
     "Even if the syntax is correct, a line of code may still produce an error. It doesn't mean the code wouldn't work. Python's `try` statement is used to handle [Exceptions](https://docs.python.org/3.5/reference/executionmodel.html#exceptions) detected during execution."
