--- a/Intermediate_1/02. Virtual Environment.ipynb
+++ b/Intermediate_1/02. Virtual Environment.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "__To deactivate your virtual environment:__\n",
     "\n",
-    "- `deactivate`"
+    "- `source deactivate`"
    ]
   },
   {
