--- a/Intermediate_1/01. Basics of OOP in Python.ipynb
+++ b/Intermediate_1/01. Basics of OOP in Python.ipynb
@@ -6,7 +6,10 @@
     "collapsed": false
    },
    "source": [
-    "# 1. Python Classes and Objects\n",
+    "# 1. Basics of OOP in Python\n",
+    "> Python has been an object-oriented language since it existed. Because of this, creating and using classes and objects are downright easy. \n",
+    "\n",
+    "## Python Classes and Objects\n",
     "\n",
     "The keyword `class` introduces a class definition. It's followed by the class name, then usually a parenthesized list of derived class/es, and ends with a colon. The indented statements below it constitute the class' attributes.\n",
     "\n",
@@ -747,6 +750,36 @@
     "\n",
     "for cls in [ExampleObject, ExampleBackupObject, AlternateExampleBackupObject, NewInitExampleObject]:\n",
     "    cls()  # instantiate each object in our list of objects so we see what they do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary \n",
+    "To summarize the trems mentioned above, here's an overview of the OOP Terminology:\n",
+    "\n",
+    "__Class__\n",
+    "-  A class is a way to take a grouping of functions and data and place them inside a container. The attributes or the data members such as class variables, class instance, and methods are accessed via dot (.) notation.\n",
+    "\n",
+    "__Instance__\n",
+    "- An individual object of a certain class. An object `red` that belongs to a class `Color`, for example, is an instance of the class `Circle`.\n",
+    "\n",
+    "__Instantiation__\n",
+    "- The creation of an instance of a class.\n",
+    "\n",
+    "__Method__\n",
+    "- A special kind of function that is defined in a class definition.\n",
+    "\n",
+    "__Object__\n",
+    "- A unique instance of a data structure that's defined by its class. An object comprises both data members (class variables and instance variables) and methods."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise:"
    ]
   },
   {
