--- a/Intermediate_1/02. Virtual Environment.ipynb
+++ b/Intermediate_1/02. Virtual Environment.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# 2. Virtual Environment\n",
     "\n",
-    "A Virtual Environment is a tool to keep the dependencies required by different projects in separate places, by creating virtual Python environments for them.\n",
+    "A Virtual Environment is a tool to keep the dependencies required by different projects in separate places.\n",
     "\n",
-    "This has many uses. One of them, for example, is if you want to develop an app using Python 3.5 while also maintaining an app that which requires Python 2.7. It will be possible if you will use a virtual environment without messing up the settings or configuration of each project. Basically, it keeps your global site-packages directory clean and manageable. \n"
+    "This has many uses. One of them, for example, is if you want to develop an app using Python 3.5 while also maintaining an app which requires Python 2.7. It will be possible if you will use a virtual environment to separate the two apps with two different Python versions. This way, you may happily create and maintain your apps without messing up the settings or configuration of each project. Basically, it keeps your global site-packages directory clean and manageable. \n"
    ]
   },
   {
