Added a screenshot for Python 2 example

--- a/Intermediate_2/01. Sets.ipynb
+++ b/Intermediate_2/01. Sets.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 1. [Sets](https://docs.python.org/3.5/library/stdtypes.html#set)\n",
     "\n",
-    "A Set is an __unordered__ collection of __unique__ (no duplicate) objects. Sets can be used to perform mathematical set operations like union, intersection, symmetric difference etc."
+    "A Set is an __unordered__ collection of __unique__ (no duplicate) objects. It can be used to perform mathematical set operations like union, intersection, symmetric difference, and etc."
    ]
   },
   {
@@ -183,7 +183,7 @@
     "\n",
     "Creates a shallow copy, which is returned.\n",
     "\n",
-    "> Note: A shallow copy constructs a new compound object and then (to the extent possible) inserts references into it to the objects found in the original."
+    "> __Note:__ A shallow copy constructs a new compound object and then (to the extent possible) inserts references into it to the objects found in the original."
    ]
   },
   {
