--- a/Intermediate_2/02. List, Set and Dictionary Comprehensions.ipynb
+++ b/Intermediate_2/02. List, Set and Dictionary Comprehensions.ipynb
@@ -338,6 +338,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Python 2.0 result:\n",
+    "\n",
+    "![Intermediate_2](./images/img_python2_range.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Set and dictionary comprehensions were not available in Python 2.x"
    ]
   }
